@@ -1,5 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
+export(aaReduction)
+export(distReduction)
 export(maTrex)
 export(quietTCRgenes)
 export(runTrex)
